Spacing fixes.

--- a/gares-games/gg.css
+++ b/gares-games/gg.css
@@ -25,7 +25,7 @@ body{
 header{
   background-color: #333;
   max-height: 100px;
-  padding: 10px;
+  padding: 25px 0px 30px 0px;
   display: flex;
   align-content: center;
   align-items: center;
@@ -39,6 +39,10 @@ header img{
 
 header h1{
   color:#399548;
+}
+
+header h1 span{
+  letter-spacing: -5.5px;
 }
 
 main{
